--- a/.github/workflows/formal.yml
+++ b/.github/workflows/formal.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Checkout riscv-formal
         uses: actions/checkout@v3
         with:
-          repository: YosysHQ/riscv-formal
+          repository: olofk/riscv-formal
       - name: Checkout SERV
         uses: actions/checkout@v3
         with:
