--- a/.github/workflows/formal.yml
+++ b/.github/workflows/formal.yml
@@ -14,6 +14,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: cores/serv/serv-src
+          repository: olofk/serv
+      - name: Checkout QERV
+        uses: actions/checkout@v3
+        with:
+          path: cores/serv/qerv-src
       - uses: YosysHQ/setup-oss-cad-suite@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
