--- a/.github/workflows/openlane.yml
+++ b/.github/workflows/openlane.yml
@@ -2,19 +2,23 @@ name: Build GDS using OpenLANE and sky130 PDK
 
 on: [push]
 jobs:
-  build-openlane:
+  build-openlane-sky130:
     runs-on: ubuntu-latest
+    env:
+      REPO : qerv
+      VLNV : qerv
     steps:
-      - name: Checkout subservient
-        uses: actions/checkout@v2
-      - name: Build with Openlane
-        uses: librecores/ci-fusesoc-action@migrate-dockerized
+      - name: Checkout repo
+        uses: actions/checkout@v3
         with:
-          core: serv
-          target: sky130
-          tool: openlane
+          path: qerv
+      - run: echo "EDALIZE_LAUNCHER=el_docker" >> $GITHUB_ENV
+      - run: pip3 install fusesoc
+      - run: fusesoc library add serv https://github.com/olofk/serv
+      - run: fusesoc library add $REPO $GITHUB_WORKSPACE/$REPO
+      - run: fusesoc run --build-root=sky130 --target=sky130 $VLNV
       - name: Store artifacts
         uses: actions/upload-artifact@v2
         with:
           name: serv.gds
-          path: /home/runner/work/serv/serv/build/serv_1.1.0/sky130-openlane/gds/serv_synth_wrapper.gds
+          path: /home/runner/work/serv/serv/sky130/sky130-openlane/gds/serv_synth_wrapper.gds
